--- a/demo11.html
+++ b/demo11.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-
+<marquee> Welcome in Shiva Concept Solution </marquee>
+<marquee direction='right' behavior="alternate"> Welcome in Shiva Concept Solution </marquee>
      <h1> HTML ELEMENT PAGE1 </h1>
      <h2> HTML ELEMENT PAGE2 </h2>
      <h3> HTML ELEMENT PAGE3 </h3>
@@ -23,7 +24,65 @@
 <div style="clear:left;"></div>
      <div style='width:400px; height:200px; background-color:black;float:left;margin-left:50px;color:white;'> Third Div </div>
      <div style='width:400px; height:200px; background-color:red;float:left;margin-left:50px;'> Fourth Div </div> 
+<br>
+<div style="clear:left;"></div>
+<br>
+<h1> Student Information </h1>
+<table border="1" style="width:500px; height:200px; margin-left:100px;">
+<tr><th>RNO</th><th>Name</th><th>Branch</th><th>Fees</th></tr>
+<tr><td>1001</td><td>XYZ</td><td>CS</td><td>15000</td></tr>
+<tr><td>1002</td><td>ABC</td><td>IT</td><td>15000</td></tr>
+<tr><td>1003</td><td>KLMN</td><td>EC</td><td>18000</td></tr>
+
+</table>
+
+<h1> Course Information</h1>
+<ul style="list-style-type:square;">
+<li>C</li>
+<li>CPP </li>
+<li>DS</li>
+<li>JAVA</li>
+</ul>
+
+<ul >
+<li style="display:inline-block; font-size">C</li>
+<li  style="display:inline-block;">CPP </li>
+<li  style="display:inline-block;">DS</li>
+<li  style="display:inline-block;">JAVA</li>
+</ul>
+
+<h2> Ordered List</h2>
+<ol>
+<li>C</li>
+<li>CPP </li>
+<li>DS</li>
+<li>JAVA</li>
+</ol>
+<br><br>
+<b> RAM</b>
+<i> adsmhf dsafydsg fhds gyfh hsdfh</i>
+<br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pKBrAq5kRWs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m8!1m3!1d3680.0057734855923!2d75.88547741496238!3d22.728026785103005!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d22.7284488!2d75.88768639999999!4m5!1s0x3962fd47d05ddd49%3A0xbbf47c08dcd01a4a!2sshiva%20concept%20solution!3m2!1d22.7282551!2d75.8879529!5e0!3m2!1sen!2sin!4v1653049628407!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
+<br>
+
+<span>SPAN FIRST</span>  <span> SPAN SECOND</span>
+
+<h3> <strike> 30% Discount on All Courses</strike></h3>
+
+<mark> sajchvh daukfh kuds fukdsh fukdsh </mark> in shiva concept
+
+<a href="https://shivaconceptsolution.com">Click here</a>
+
+Ram    &nbsp;&nbsp;&nbsp;                               Krishan
+
+<fieldset style="border:2px solid black;">
+	<legend style="border:2px solid black;">Our Mission</legend>
+	<p>asd ysafyusf tysdtfidsafasdfyiyadsfiuafy iuaf yuisdafyusdf yusd afyuia ysfuiasdy fuida ffdsdsaf iusadf udsa fi fyuisfy safsayf yusf uisadf usa fuisdf uisf uisf yuf uisf ui faiudsfudsaif uif yuidsafy saui saufysdafusda  fuisdafy usiafy ausdfysaudfy uisadfy uisa fyusay fuisd fysadiufysufusfsufsuusfsfd.</p>
+
+</fieldset>
 </body>
 </html>
